[package]
name = "ext4"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
path = { path = "path" }
fs_core = { path = "fs-core" }
synchronizations = { path = "synchronizations" }
hashbrown = "0.9.0"
num_enum = { version = "0.5.0", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "*" }
crossbeam-utils = { version = "0.8", default-features = false }

[features]
default = ["dblock_cache", "extent_cache"]
std = ["crossbeam-utils"]
extern_print = []
trace_ext4 = []
extent_cache = []
dblock_cache = []
