[package]
name = "linux_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
ext4 = { path = "../", features = ["std"] }
fs_core = { path = "../fs-core" }
path = { path = "../path" }
colored = "2.0.0"
linux_driver = { path = "../linux_driver" }
